# standards-llm-wiki

./: .gitignore  README.md  SCHEMA.md  index.md  log.md  pyproject.toml
_meta/: architecture-principles.md  evaluation-benchmark.md  export-formats.md  extraction-prompts.md  extraction-rules.md  graph-model.md  ingestion-pipeline.md  model-strategy.md  naming-conventions.md  parser-strategy.md  phase-1-development-scope.md  quality-checklist.md  requirement-obligation-schema.md  roadmap.md  source-inventory.md  tooling.md  unresolved-issues.md
eval/: rubric.md
indexes/: cited-documents-index.md  documents-index.md  effective-dates-index.md  provisions-index.md  replaced-standards-index.md  standards-index.md  topic-to-documents-index.md  topic-to-standards-index.md  transition-periods-index.md
tests/: test_archive.py  test_audit.py  test_build_indexes_cli.py  test_candidate_writer.py  test_candidates.py  test_classifier.py  test_compiler.py  test_eval.py  test_eval_cli.py  test_export_benchmark.py  test_export_graph.py  test_export_json_cli.py  test_export_sqlite_cli.py  test_html_extractor.py  test_indexer.py  test_ingest_smoke.py  test_jobs.py  test_metadata.py  test_pdf_extractor.py  test_phase1_5_regression.py  test_phase2_cli.py  test_provision_page_generator.py  test_provisions.py  test_real_run.py  test_requirements.py  test_review.py  test_review_cli.py  test_search.py  test_search_sqlite.py  test_sqlite_export.py  test_tagging.py  test_tagging_cli.py  test_utils.py  test_validate.py
tools/: audit_candidates.py  build_indexes.py  compile_document.py  (+18 more)
(+39 files in other folders)
