[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "standards_wiki"
version = "0.1.0"
description = "Regulatory Knowledge Compiler — Standards & Regulations LLM Wiki"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.23.0",
    "pymupdf4llm>=0.0.7",
    "marker-pdf>=1.4.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
